# homework8-1-

./: .gitignore  CMakeLists.txt
homework 8/: CMakeLists.txt  homework 8.cpp  homework 8.h
